Collection offset not working correctly in particle system 'Whole Collection' #73590

Closed
opened 2020-02-04 16:09:02 +01:00 by Simon Thommes · 6 comments
Member

System Information
Operating system: Linux-5.3.0-7625-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44

Blender Version
Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-02-03 11:16, hash: aea125fe9d
Worked: (optional)

Short description of error
The offset used for collection instances is not used correctly when instancing the whole collection in a particle system.
It seems that the particle's scale is not taken into account for the offset.bug-particle-instancing.blend

Exact steps for others to reproduce the error

Bug visible in attached file.

From default startup:

  • Create collection with objects
  • Shift 3D cursor away from world origin
  • Select collection objects > shift+s > selection to cursor (keep offset)
  • Set collection offset from cursor
  • Create particle system > Render As: Collection > Whole Collection: True

When setting Scale to 1 (and hair length to 1m) it works fine. Changing the scale shifts the offset.

**System Information** Operating system: Linux-5.3.0-7625-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44 **Blender Version** Broken: version: 2.83 (sub 2), branch: master, commit date: 2020-02-03 11:16, hash: `aea125fe9d` Worked: (optional) **Short description of error** The offset used for collection instances is not used correctly when instancing the whole collection in a particle system. It seems that the particle's scale is not taken into account for the offset.[bug-particle-instancing.blend](https://archive.blender.org/developer/F8320899/bug-particle-instancing.blend) **Exact steps for others to reproduce the error** Bug visible in attached file. From default startup: - Create collection with objects - Shift 3D cursor away from world origin - Select collection objects > shift+s > selection to cursor (keep offset) - Set collection offset from cursor - Create particle system > Render As: Collection > Whole Collection: True When setting Scale to 1 (and hair length to 1m) it works fine. Changing the scale shifts the offset.
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This is kind of confusing.
I don't know exactly how it should be.
But I confirm that there is something strange.

This is kind of confusing. I don't know exactly how it should be. But I confirm that there is something strange.

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by ca3c16ec43

This issue was referenced by ca3c16ec4337e25590ea1f7566cf34d0ae173930
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-09-14 17:19:26 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73590
No description provided.